# shasta

./: .gitignore  .nojekyll  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  OLD-README.md  README.md  travis-build.sh
.github/: main.workflow
.github/workflows/: Build.yml  Ubuntu-16.04.yml  Ubuntu-18.04.yml  macOS-10.14.yml  main.yml
AppImage/: CreateAppImage.py  README.md
AppImage/AppDir/: AppRun  shasta.desktop
conf/: HiFi-Oct2021.conf  MarginPhase-allParams.np.json  Nanopore-Dec2019.conf  Nanopore-Human-SingleFlowcell-May2022.conf  Nanopore-Human-SingleFlowcell-Phased-May2022.conf  Nanopore-Jun2020-Automation.conf  Nanopore-Jun2020.conf  Nanopore-May2022.conf  Nanopore-Oct2021.conf  Nanopore-OldGuppy-Sep2020.conf  Nanopore-Phased-Aug2021.conf  Nanopore-Phased-Jan2022.conf  Nanopore-Phased-May2022.conf  Nanopore-Plants-Apr2021.conf  Nanopore-Sep2020.conf  Nanopore-UL-Dec2019.conf  Nanopore-UL-Jan2022-Prelim0.conf  Nanopore-UL-Jan2022.conf  Nanopore-UL-Jun2020-Automation.conf  Nanopore-UL-Jun2020.conf  Nanopore-UL-May2022.conf  Nanopore-UL-Oct2021.conf  Nanopore-UL-Phased-Jan2022.conf  Nanopore-UL-Phased-May2022.conf  Nanopore-UL-Phased-Oct2021.conf  Nanopore-UL-Phased-Prelim0-Jan2022.conf  Nanopore-UL-Sep2020.conf  Nanopore-UL-iterative-Sep2020.conf  PacBio-CCS-Dec2019.conf  PacBio-CLR-Dec2019.conf  README.md  RemoveConflicts.conf  SimpleBayesianConsensusCaller-1.csv  SimpleBayesianConsensusCaller-10.csv  SimpleBayesianConsensusCaller-11.csv  SimpleBayesianConsensusCaller-2.csv  SimpleBayesianConsensusCaller-3.csv  SimpleBayesianConsensusCaller-4.csv  SimpleBayesianConsensusCaller-5.csv  SimpleBayesianConsensusCaller-6.csv  (+7 more)
docker/: Dockerfile  Makefile  wrapper.sh
docs/: Acknowledgments.html  BuildingFromSource.html  CONTRIBUTING.html  CONTRIBUTING.md  ChooseMemoryOptions.html  CommandLineOptions.html  Commands.html  Compatibility.html  ComputationalMethods.html  Configurations.html  Contributing.html  CurrentStatus.html  Docker.html  InspectingResults.html  Introduction.html  MakeRelease.html  MarkerGraph-1.dot  MarkerGraph-2.dot  MarkerGraph-3.dot  MarkerGraph-4.dot  MarkerGraph-7.dot  MarkerGraph-8.dot  MarkerGraphLegend-Compact.html  MarkerGraphLegend-Detailed.html  Motivation.html  Navigation.html  Performance.html  Prerequisites.html  Python.html  QuickStart.html  ReadGraph.html  ReportingBugs.html  Running.html  RunningSmall.html  SupportedPlatforms.html  gpu.html  index.html  indexNew.html  style.css  template.html
docs/PythonApi/: Makefile  README  conf.py
docs/PythonApi/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/PythonApi/_build/html/_sources/: index.rst.txt
docs/PythonApi/_build/html/_static/: basic.css  classic.css
docs/doxygen/: Doxyfile  README
docs/oldDocs/: MarkerGraphLegend-Compact.html  MarkerGraphLegend-Detailed.html  RunningSmall.html  index.html
dynamicExecutable/: CMakeLists.txt  README.md
dynamicLibrary/: CMakeLists.txt  README.md
models/: A_2018_12_4_15_38_20_105463.csv  C_2018_12_4_15_38_20_117575.csv  G_2018_12_4_15_38_20_112692.csv  T_2018_12_4_15_38_20_115145.csv
scripts/: AddReadsFromFasta.py  AlignOrientedReads.py  AlignOrientedReads1.py  AlignOrientedReads4.py  AlignOrientedReads5.py  AlignOverlappingOrientedReads.py  AlignPseudoPaths.py  AnalyzeAlignmentMatrix.py  AnalyzeAlignments.py  AnalyzeAssemblyGraphBubbles.py  AnalyzeDirectedReadGraphVertex.py  AnalyzeMarkerGraphBranches.py  AnalyzeMarkerGraphForks.py  AnalyzeMarkerGraphVertex.py  AnalyzeMode3Subgraph.py  AnalyzeOrientedReadPaths.py  AnalyzeOrientedReadPathsThroughSegment.py  AnalyzeReadGraph.py  Assemble.py  AssembleMarkerGraphEdges.py  AssembleMarkerGraphVertices.py  AssembleSegment.py  CheckConfigurations.py  CheckMarkerGraphIsStrandSymmetric.py  CleanupConflictReadGraph.py  CleanupDuplicateMarkers.py  CleanupHugePages.py  CleanupRunDirectory.py  ClusterMarkerGraphEdgeOrientedReads.py  ColorConflictReadGraph.py  ColorGfaBySimilarityToSegment.py  ColorGfaKeySegments.py  ColorGfaWithTwoReads.py  ComputeAlignments.py  ComputeAlignmentsGpu.py  ComputeAllAlignments.py  ComputeAssemblyGraphEdgesPhasingSimilarity.py  ComputeAssemblyStatistics.py  ComputeMarkerGraphCoverageHistogram.py  ComputeMarkerGraphSpanningSubgraph.py  (+155 more)
src/: Align4.cpp  Align4.hpp  Align5.cpp  Align5.hpp  Alignment.cpp  Alignment.hpp  AlignmentCandidates.hpp  AlignmentGraph.cpp  AlignmentGraph.hpp  AlignmentGraph4.cpp  AlignmentGraph4.hpp  AssembledSegment.cpp  AssembledSegment.hpp  Assembler-Mode1.cpp  Assembler.cpp  Assembler.hpp  AssemblerAlign.cpp  AssemblerAlign1.cpp  AssemblerAlign2.cpp  AssemblerAlign3.cpp  AssemblerAlign4.cpp  AssemblerAlign5.cpp  AssemblerAlignmentCandidates.cpp  AssemblerAlignmentGraph.cpp  AssemblerAlignments.cpp  AssemblerAnalyze.cpp  AssemblerAnalyzePaths.cpp  AssemblerAssemblyGraph.cpp  AssemblerAssemblyGraph2.cpp  AssemblerAssemblyGraphBubbles.cpp  AssemblerCandidateGraph.cpp  AssemblerCompressedAssemblyGraph.cpp  AssemblerConflictReadGraph.cpp  AssemblerCreateReadGraphMode1.cpp  AssemblerCreateReadGraphUsingPseudoPaths.cpp  AssemblerDetangle.cpp  AssemblerDirectedReadGraph.cpp  AssemblerHttpServer-Alignments.cpp  AssemblerHttpServer-AssemblyGraph.cpp  AssemblerHttpServer-CompressedAssemblyGraph.cpp  (+300 more)
src-dynamic-executable-debug/: CMakeLists.txt
src-static-executable/: AssemblerOptions.cpp  AssemblerOptions.hpp  AssemblyOptions.cpp  AssemblyOptions.hpp  CMakeLists.txt  main.cpp
src/gpu/: AssemblerAlign-gpu.cpp  AssemblerMarkerGraphGpu.cpp  CMakeLists.txt  GPU.cu  GPU.h  README.md
src/gpuLibrary/: CMakeLists.txt
srcMain/: AssemblerOptions.cpp  AssemblerOptions.hpp  README.md  main.cpp
staticExecutable/: CMakeLists.txt  README.md
staticExecutableGpu/: CMakeLists.txt  README.md
staticLibrary/: CMakeLists.txt  README.md
unused/: DeBruijnGraph.hpp  README  chokePoints.hpp  fisher.cpp  fisher.hpp  makeBiconnected.hpp
